# dandan

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  codecov.yml  fixes.txt
.github/workflows/: cmake-multi-platform.yml  coverage.yml  cppcheck.yml  doxygen-check.yml  static-analysis.yml
cmake/: DoxyGen.cmake  code-coverage.cmake  coverage.cmake
data/: decklist.txt  temp_decklist.txt
data/jsons/: Accumulated Knowledge.json  Brainstorm.json  Crystal Spray.json  Dance of the Skywise.json  Dandan.json  Diminishing Returns.json  Halimar Depths.json  Island.json  Izzet Boilerworks.json  Lonely Sandbar.json  Memory Lapse.json  Metamorphose.json  Metamorpose.json  Mind Bend.json  Mystical Tutor.json  Predict.json  Remote Isle.json  Shivan Reef.json  ShivanReef.json  Svyelunite Temple.json  Temple of Epiphany.json  TempleOfEpiphany.json  Unsubstantiate.json  Vision Charm.json
include/: CMakeLists.txt
include/dandan/: Card.h  Events.h  IAbility.h  IAbilityDecorator.h  IManaDecorator.h  ManaAbility.h  ReplacementAbility.h  TriggeredAbility.h  WithDamage.h  dandan.h  log.h
include/dandan/abilities/: AbilityContext.h  AbilityType.h  ActivatedAbility.h  BasicLandAbility.h  BoundAbility.h  CMakeLists.txt  EventTriggeredAbility.h  Events.h  IAbility.h  IAbilityDecorator.h  KeyWords.h  ManaAbility.h  ReplacementAbility.h  SpellAbility.h  StateTriggeredAbility.h  StaticAbility.h  TriggeredAbility.h  WithAdditionalCost.h  WithDamage.h
include/dandan/conditions/: ControlsIslandCondition.h  ControlsNoIslandCondition.h  DefenderControlsNoBasicCondition.h  FlyingCondition.h  ICondition.h  MatchesReadLinksCondition.h  PlayedLandCondition.h  SelfControlsNoBasicCondition.h  StartingPlayerCondition.h  SummoningSicknessCondition.h
include/dandan/core/: Actions.h  Battlefield.h  Board.h  CMakeLists.txt  Card.h  CardCharacteristics.h  CardData.h  CardDataFactory.h  CardID.h  ColorWord.h  (+27 more)
src/: CMakeLists.txt  main.cpp
src/dandan/: AbilityDecorator.cpp  CMakeLists.txt  Card.cpp  EntersBattlefieldEvent.cpp  EntersTappedEffect.cpp  ManaAbility.cpp  ManaDecorator.cpp  PeekEffect.cpp  ReplacementAbility.cpp  ScryEffect.cpp  TriggeredAbility.cpp  WithDamage.cpp  log.cpp  log.h  overloadVisitor.h  util.h
src/dandan/abilities/: AbilityType.cpp  ActivatedAbility.cpp  BoundAbility.cpp  CMakeLists.txt  EntersBattlefieldEvent.cpp  EntersTappedEffect.cpp  EventTriggeredAbility.cpp  ManaAbility.cpp  PeekEffect.cpp  ReplacementAbility.cpp  ScryEffect.cpp  SpellAbility.cpp  StateTriggeredAbility.cpp  StaticAbility.cpp  TriggeredAbility.cpp  WithAdditionalCost.cpp  WithDamage.cpp
src/dandan/conditions/: CMakeLists.txt  ControlsIslandCondition.cpp  ControlsNoIslandCondition.cpp  DefenderControlsNoIslandCondition.cpp  FlyingCondition.cpp  PlayedLandCondition.cpp  SelfControlsNoIslandCondition.cpp  SummoningSicknessCondition.cpp
src/dandan/core/: Battlefield.cpp  Board.cpp  CMakeLists.txt  Card.cpp  CardData.cpp  CardDataFactory.cpp  CardID.cpp  Deck.cpp  EventManager.cpp  Game.cpp  Hand.cpp  Library.cpp  Player.cpp  PlayerID.cpp  PreventionManager.cpp  PriorityManager.cpp  ReplacementManager.cpp  SBAManager.cpp  Stack.cpp  Target.cpp  Zone.cpp
src/dandan/core/actions/: ActivateAbilityAction.cpp  CardDrawAction.cpp  PlayCardAction.cpp
src/dandan/core/phases/: BeginningPhase.cpp  CombatPhase.cpp  EndingPhase.cpp  MainPhase.cpp
src/dandan/costs/: AndCost.cpp  CMakeLists.txt  ColoredManaCost.cpp  CyclingCost.cpp  GenericManaCost.cpp  ManaCost.cpp  SelfSacrificeCost.cpp  TapCost.cpp
src/dandan/effects/: BounceLandEffect.cpp  CMakeLists.txt  DrawEffect.cpp  ETBEffect.cpp  EntersTappedEffect.cpp  PeekEffect.cpp  ScryEffect.cpp
src/dandan/effects/continuous/: CMakeLists.txt
src/dandan/effects/continuous/prevention/: AttackPreventionEffect.cpp  BlockPreventionEffect.cpp  CMakeLists.txt  DrawPreventionEffect.cpp  PlayCardPreventionEffect.cpp
src/dandan/effects/continuous/replacement/: CMakeLists.txt  EntersTappedEffect.cpp
src/dandan/effects/one_shot/: AddManaEffect.cpp  AttackEffect.cpp  BounceEffect.cpp  BounceLandEffect.cpp  CMakeLists.txt  ChangeCharacteristicsEffect.cpp  ChangeLandTypeEffect.cpp  ChooseCardNameAndMillEffect.cpp  DestroyEffect.cpp  DrawEffect.cpp  ETBEffect.cpp  ExileTopEffect.cpp  IOneShotEffect.cpp  MemoryLapseEffect.cpp  MillEffect.cpp  MindBendEffect.cpp  ModalEffect.cpp  OptionalDrawEffect.cpp  PeekEffect.cpp  PutCardOnTopEffect.cpp  ScryEffect.cpp  ShowAndTellEffect.cpp  TimeTwisterEffect.cpp  TutorTopEffect.cpp  UntapEffect.cpp
src/dandan/events/: CMakeLists.txt  ETBEvent.cpp  EntersBattlefieldEvent.cpp
src/dandan/numbers/: CMakeLists.txt  ConditionalNumber.cpp
src/dandan/replacement_effects/: CMakeLists.txt  EntersTappedEffect.cpp
src/dandan/serialization/: CMakeLists.txt  JsonAbilityFactory.cpp  JsonCardFactory.cpp  JsonConditionFactory.cpp  JsonCostFactory.cpp  JsonEffectContinuousFactory.cpp  JsonEffectFactory.cpp  JsonEffectOneShotFactory.cpp  JsonEventFactory.cpp  JsonFactory.cpp  JsonManaFactory.cpp  JsonNumberFactory.cpp  JsonReplaceFactory.cpp  JsonTriggerFactory.cpp
src/dandan/triggers/: CMakeLists.txt  SelfETBTrigger.cpp
src/dandan/utils/: overloadVisitor.h  stringToBasicLandType.h  stringToColorWord.h
tests/: CMakeLists.txt  CreatureDefinitions.h  DandanLibSerializationTest.cpp  DandanLibTest.cpp  DandanLib_test.cpp  LandDefinitions.h  SpellDefinitions.h  common.h
tests/core/: CardDataTest.cpp
tests/integration/: AbilityDisplayOptionsTest.cpp  AbilityDisplayTest.cpp  CMakeLists.txt  DandanLibTest.cpp  TestCardsCreate.h  common.h
tests/serialization/: CMakeLists.txt  DandanCreatureSerializationTest.cpp  DandanLandsSerializationTest.cpp  common.cpp  common.h
tests/unit/: CMakeLists.txt  SpellAbilityCreateEffectTest.cpp  UtilTest.cpp
tests/unit/core/: CardDataTest.cpp
tests/unit/serialization/: CMakeLists.txt  DandanCreatureSerializationTest.cpp  DandanLandsSerializationTest.cpp  DandanSpellsSerializationTest.cpp  DeserializeTest.cpp  DeserializeTest.h  common.cpp  common.h
(+113 files in other folders)
